--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -2,28 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ali\n"
+      "Twinkle, twinkle, little star,\n",
+      "\tHow I wonder what you are!\n",
+      "\t\tUp above the world so high,\n",
+      " \t\tLike a diamond in the sky.\n",
+      "Twinkle, twinkle, little star,\n",
+      "\tHow I wonder what you are!\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "a = \"ali\"\n",
-    "print (a)"
+    "str1 = \"Twinkle, twinkle, little star,\\n\"\n",
+    "str2 = \"\\tHow I wonder what you are!\\n\"\n",
+    "str3 = \"\\t\\tUp above the world so high,\\n \\t\\tLike a diamond in the sky.\\n\"\n",
+    "print(str1+str2+str3+str1+str2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current date and time :  2019-11-03 10:49:08.926296\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "print (\"Current date and time : \" , now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the radius: 23.4\n",
+      "The area of circle is :  1720.4335199999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input(\"Enter the radius: \"))\n",
+    "PI = 3.142\n",
+    "area = PI * radius * radius\n",
+    "print(\"The area of circle is : \",area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your first name: faiq\n",
+      "Enter your last name: ali\n",
+      "ali faiq\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = input(\"Enter your first name: \")\n",
+    "last_name = input(\"Enter your last name: \")\n",
+    "print(last_name + \" \" + first_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number: 1\n",
+      "Enter the second number: 3\n",
+      "The addition of two no. is:  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_1 = int(input(\"Enter the first number: \"))\n",
+    "no_2 = int(input(\"Enter the second number: \"))\n",
+    "add = no_1 + no_2\n",
+    "print(\"The addition of two no. is: \", add)"
+   ]
   }
  ],
  "metadata": {
